# Trojan-Qt5

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README_CN.md  bin.qrc  icons.qrc  translations.qrc  trojan-qt5.pro
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  bug_report_zh.md  feature_request.md
.github/workflows/: pacman.yml
3rd/trojan-qt5-core/: exports.txt  go.mod  go.sum  main.go  msvc.py  process.bat
3rd/trojan-qt5-libs/: go.mod  go.sum  main.go  msvc.py  process.bat
3rd/tun2socks/: go.mod  go.sum  main.go  main_socks.go
debian/: changelog  control  copyright  rules
i18n/: trojan-qt5_zh_CN.qm  trojan-qt5_zh_CN.ts  trojan-qt5_zh_TW.qm  trojan-qt5_zh_TW.ts
icons/: trojan-qt5.icns
resources/: Appcast_Windows.xml  Appcast_macOS.xml  Info.plist  bin.qrc  conf.qrc  credits.html  credits.qrc  dat.qrc  icons.qrc  installer.nsi  pac.qrc  pem.qrc  qss.qrc  scripts.qrc  translations.qrc
resources/conf/: haproxy.conf
resources/dat/: update.sh
resources/i18n/: trojan-qt5_en_US.ts  trojan-qt5_ja_JP.qm  trojan-qt5_ja_JP.ts  (+6 more)
scripts/: checksum.py  linux_compile.sh  md5.py  sha1.py
src/: aboutdialog.cpp  aboutdialog.h  addresstester.cpp  addresstester.h  advancesettingsdialog.cpp  advancesettingsdialog.h  clickablelabel.cpp  clickablelabel.h  confighelper.cpp  confighelper.h  connection.cpp  connection.h  connectionitem.cpp  connectionitem.h  connectionsortfilterproxymodel.cpp  connectionsortfilterproxymodel.h  connectiontablemodel.cpp  connectiontablemodel.h  editdialog.cpp  editdialog.h  eventfilter.cpp  eventfilter.h  generalvalidator.cpp  generalvalidator.h  grpc.pri  haproxythread.cpp  haproxythread.h  httpeditdialog.cpp  httpproxy.cpp  httpproxy.h  ip4validator.cpp  ip4validator.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  midman.cpp  midman.h  pachelper.cpp  (+95 more)
src/privoxy/: AUTHORS  ChangeLog  GNUmakefile.in  INSTALL  Makefile  README  TODO  acconfig.h  actionlist.h  actions.c  actions.h  cgi.c  cgi.h  cgiedit.c  cgiedit.h  cgisimple.c  cgisimple.h  client-tags.c  client-tags.h  config  config.guess  config.h  config.h.in  config.sub  configure.in  cygwin.h  deanimate.c  deanimate.h  default.action.master  default.filter  encode.c  encode.h  errlog.c  errlog.h  filters.c  filters.h  fuzz.c  gateway.c  gateway.h  jbsockets.c  (+39 more)
src/privoxy/autom4te.cache/: output.0  requests  traces.0
src/privoxy/doc/: gpl.html  pcrs.3
src/privoxy/doc/source/: authors.sgml  buildsource.sgml  changelog.sgml  config.sgml  contacting.sgml  copyright.sgml  developer-manual.sgml  faq.sgml  history.sgml  install.sgml  ldp.dsl  ldp.dsl.in  license.sgml  newfeatures.sgml  p-authors.sgml  p-config.sgml  privoxy-man-page.sgml  privoxy.sgml  readme.sgml  seealso.sgml  supported.sgml  user-manual.sgml
src/privoxy/doc/source/webserver/: index.sgml
src/privoxy/doc/webserver/: README.txt  announce.txt  index.html  p_doc.css  p_feedback.css  privoxy-index.html  privoxy.css  robots.txt
src/privoxy/doc/webserver/developer-manual/: coding.html  documentation.html  git.html  index.html  introduction.html  newrelease.html  testing.html  webserver-update.html
src/privoxy/doc/webserver/faq/: configuration.html  contact.html  copyright.html  general.html  index.html  installation.html  misc.html  trouble.html
src/privoxy/doc/webserver/man-page/: privoxy-man-page.html
src/privoxy/doc/webserver/sponsors/: index.html
src/privoxy/doc/webserver/team/: index.html
src/privoxy/doc/webserver/user-manual/: actions-file.html  appendix.html  config.html  configuration.html  contact.html  copyright.html  filter-file.html  index.html  installation.html  introduction.html  quickstart.html  seealso.html  startup.html  templates.html  whatsnew.html
src/privoxy/pcre/: Makefile  Makefile.in  RunTest  RunTest.in  a.py  config.cache  config.guess  config.h  config.in  config.status  config.sub  configure  configure.in  dftables.c  dll.mk  get.c  internal.h  ltconfig  ltmain.sh  maketables.c  pcre-config  pcre-config.in  pcre.c  pcre.def  pcre.h  pcre.in  pcregrep.c  pcreposix.c  pcreposix.h  pcretest.c  study.c  vc_dftables.dsp
src/privoxy/pcre/doc/: ChangeLog  NON-UNIX-USE  Tech.Notes  authors  copying  news  pcre.3  pcre.html  pcre.txt  pcregrep.1  pcregrep.html  pcregrep.txt  pcreposix.3  pcreposix.html  pcreposix.txt  pcretest.txt  perltest.txt  readme
src/privoxy/slackware/: rc.privoxy.orig
src/privoxy/templates/: blocked  cgi-error-404  cgi-error-bad-param  cgi-error-disabled  cgi-error-file  cgi-error-file-read-only  cgi-error-modified  cgi-error-parse  cgi-style.css  client-tags  connect-failed  connection-timeout  default  edit-actions-add-url-form  edit-actions-for-url  edit-actions-for-url-filter  edit-actions-list  edit-actions-list-button  edit-actions-list-section  edit-actions-list-url  edit-actions-remove-url-form  edit-actions-url-form  forwarding-failed  mod-local-help  mod-support-and-service  mod-title  mod-unstable-warning  no-server-data  no-such-domain  show-request  show-status  show-status-file  show-url-info  toggle  toggle-mini  untrusted  url-info-osd.xml
src/privoxy/tools/: privoxy-log-parser.pl  privoxy-regression-test.pl  uagen.pl  url-pattern-translator.pl
src/privoxy/utils/: changelog2doc.pl  create-package-feed.pl  filter2docs.pl  makeChangeLog  prepare-configfile.pl
src/privoxy/utils/docbook2man/: docbook2man-spec.pl  docbook2man-spec.pl.1
src/privoxy/utils/ldp_print/: README  VERSION  fix_print_html.lib  ldp_print
src/privoxy/windows/: GNUmakefile  MYconfigure  WinMessages.nsh  privoxy_winthreads.nsi
ui/: aboutdialog.ui  advancesettingsdialog.ui  editdialog.ui  httpeditdialog.ui  mainwindow.ui  routewidget.ui  settingsdialog.ui  settingsdialog_old.ui  sharedialog.ui  snelleditdialog.ui  socks5editdialog.ui  speedplot.ui  sseditdialog.cpp  sseditdialog.h  sseditdialog.ui  ssreditdialog.ui  streamwidget.ui  subscribedialog.ui  trojaneditdialog.ui  trojangowidget.ui  uriinputdialog.ui  userrules.ui  userrulesdialog.ui  vmesseditdialog.ui
(+134 files in other folders)
